[Issue 8] Alignment Tweaks on Share This Link

--- a/main/src/main/js/launch/src/components/CopyToClipboard/copy-to-clipboard.css
+++ b/main/src/main/js/launch/src/components/CopyToClipboard/copy-to-clipboard.css
@@ -1,19 +1,19 @@
 .copy-to-clipboard {
-    position: relative;
-    display: flex;
+  position: relative;
+  display: flex;
 }
 
 .copy-to-clipboard .copied {
-    position: absolute;
-    left: -5em;
-    background: black;
-    color: white;
-    padding: 2px 4px;
-    border-radius: 2px;
-    opacity: 0;
-    transition: opacity 0.5s ease;
+  position: absolute;
+  left: -5em;
+  background: rgb(48, 48, 48);
+  color: white;
+  padding: 2px 4px;
+  border-radius: 2px;
+  opacity: 0;
+  transition: opacity 0.5s ease;
 }
 
 .copy-to-clipboard .copied.active {
-    opacity: 1;
+  opacity: 1;
 }
